[tool.poetry]
name = "audio_waveform_generator"
version = "0.1.0"
description = "Generates audio waveform data from a given source audio file."
authors = ["Puneeth R <github puneeth-r>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.8.0"
scipy = "^1.7.3"
numpy = "^1.21.6"
matplotlib = "^3.5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
